--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.7",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.6",
     "postcss": "^8.4.14",
@@ -36,5 +37,9 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.5.6"
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "rules": {}
   }
 }
