--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.16",
+    "@react-google-maps/api": "^2.19.2",
     "clsx": "^1.2.1",
     "next": "13.1.6",
     "react": "18.2.0",
